@@ -2,6 +2,8 @@
 - Fix alignment bug for ID-tagged AI outputs: when mapping redaction/rephrase results back to comments, coerce `originalRow`/`scannedIndex` to numbers before comparison. This prevents misses when IDs arrive as strings (e.g., "10") while comments hold numbers (10), which could show original text instead of redacted for some rows.
 - Frontend merge now preserves backend `finalText` and `mode` fields so UI can reliably display AI-processed text even if `redactedText`/`rephrasedText` are omitted in some routes.
 
+- Respect RPM: serialize redaction and rephrase calls per model/group and use the actual group's `rpm_limit` for pacing via `enforceRpmDelay`. This avoids parallel hits to the same model that could trigger "Too Many Requests" on Bedrock Anthropic Claude (haiku).
+
 Files impacted:
 - supabase/functions/post-process-comments/index.ts
 - src/components/CommentEditor.tsx
